fix: match card v2 names alignment left

--- a/src/pickleball/MatchCardV2/MatchCardV2.module.css
+++ b/src/pickleball/MatchCardV2/MatchCardV2.module.css
@@ -103,7 +103,7 @@
 }
 
 .player-names {
-  @apply flex flex-col items-center;
+  @apply flex flex-col;
 }
 
 .player-info-name {
